--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -15,6 +15,8 @@ name: Build and Deploy to GKE
 on:
   push:
     branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
