--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         token_format: 'access_token'
         workload_identity_provider: 'projects/566631987144/locations/global/workloadIdentityPools/pool1/providers/github-provider1'
-        service_account: "gkeops@$PROJECT_ID.iam.gserviceaccount.com"
+        service_account: "gkeops@${{ secrets.GKE_PROJECT }}.iam.gserviceaccount.com"
 
     # Alternative option - authentication via credentials json
     # - id: 'auth'
