--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -22,7 +22,7 @@ env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GAR_LOCATION: us-central1 # TODO: update region of the Artifact Registry
   GKE_CLUSTER: c1    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
+  GKE_ZONE: us-central1   # TODO: update to cluster zone
   DEPLOYMENT_NAME: kuard # TODO: update to deployment name
   REPOSITORY: goserver # TODO: update to Artifact Registry docker repository
   IMAGE: guard
