--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -47,7 +47,7 @@ jobs:
       uses: 'google-github-actions/auth@v0'
       with:
         token_format: 'access_token'
-        workload_identity_provider: 'projects/566631987144/locations/global/workloadIdentityPools/pool1/providers/github-provider2'
+        workload_identity_provider: 'projects/${{ secrets.GKE_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/pool1/providers/github-provider2'
         service_account: "gkeops@${{ secrets.GKE_PROJECT }}.iam.gserviceaccount.com"
 
     # Alternative option - authentication via credentials json
