--- a/deploy/d.yaml
+++ b/deploy/d.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: kuard
-        image: us-central1-docker.pkg.dev/civil-orb-388902/goserver/kuard:blue
+        image: kuard
         ports:
         - containerPort: 8080
           name: http
