--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -24,7 +24,7 @@ env:
   GKE_CLUSTER: c1    # cluster name
   GKE_ZONE: us-central1   # cluster zone
   DEPLOYMENT_NAME: kuard # deployment name
-  REPOSITORY: goserver # Artifact Registry docker repository
+  REPOSITORY: images # Artifact Registry docker repository
   IMAGE: kuard
   KUSTOMIZE_VERSION: 4.5.7
 
@@ -48,7 +48,7 @@ jobs:
       uses: 'google-github-actions/auth@v0'
       with:
         token_format: 'access_token'
-        workload_identity_provider: 'projects/${{ secrets.GKE_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/pool1/providers/github-provider2'
+        workload_identity_provider: 'projects/${{ secrets.GKE_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/pool1/providers/github-provider'
         service_account: "gkeops@${{ secrets.GKE_PROJECT }}.iam.gserviceaccount.com"
 
     # Alternative option - authentication via credentials json
@@ -85,6 +85,6 @@ jobs:
         curl -LO "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2Fv${KUSTOMIZE_VERSION}/kustomize_v${KUSTOMIZE_VERSION}_linux_amd64.tar.gz"
         tar zxf "kustomize_v${KUSTOMIZE_VERSION}_linux_amd64.tar.gz"
         cd deploy
-        ../kustomize edit set image kuard=${GAR_LOCATION}-docker.pkg.dev/${PROJECT_ID}/goserver/$IMAGE:green
+        ../kustomize edit set image kuard=${GAR_LOCATION}-docker.pkg.dev/${PROJECT_ID}/$REPOSITORY/$IMAGE:green
         kubectl kustomize . | kubectl apply -f -
         kubectl rollout status deployment/kuard
